--- a/debian/rules
+++ b/debian/rules
@@ -9,3 +9,5 @@ export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 
 override_dh_missing:
 	dh_missing --fail-missing
+override_dh_shlibdeps:
+	dh_shlibdeps --dpkg-shlibdeps-params=--ignore-missing-info
