--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,7 @@ Depends: ${misc:Depends},
          moxa-push-button,
          moxa-uart-control,
          moxa-dio-control,
-         moxa-module-control,
+         moxa-module-control (>= 1.3.1),
          moxa-firmware-tools,
          moxa-cellular-utils,
          moxa-wifi-utils,
