fix: fix style of debian/control

--- a/debian/control
+++ b/debian/control
@@ -8,32 +8,51 @@ Homepage: http://www.moxa.com/
 
 Package: uc5100-base-system
 Architecture: any
-Depends: ${misc:Depends}, moxa-led-control, moxa-push-button, moxa-uart-control, u-boot-tools, uc5100-kernel, uc5100-modules-std, uc5100-moxa-configs, uc5100-sparklan-firmware, moxa-module-control, moxa-firmware-tools, moxa-cellular-utils, moxa-wifi-utils, moxa-nport-real-tty-utils, tpm2-tools, moxa-cellular-signald, moxa-wifi-signald, moxa-rclocal, moxa-dio-control
+Depends: ${misc:Depends},
+         ${shlibs:Depends},
+         uc5100-moxa-configs (= ${binary:Version}),
+         uc5100-sparklan-firmware (= ${binary:Version}),
+         uc5100-kernel (>= ${binary:Version}),
+         uc5100-modules-std (>= ${binary:Version}),
+         moxa-led-control,
+         moxa-push-button,
+         moxa-uart-control,
+         moxa-dio-control,
+         moxa-module-control,
+         moxa-firmware-tools,
+         moxa-cellular-utils,
+         moxa-wifi-utils,
+         moxa-cellular-signald,
+         moxa-wifi-signald,
+         moxa-nport-real-tty-utils,
+         moxa-rclocal,
+         u-boot-tools,
+         tpm2-tools
 Description: Base system for UC-5100
  It contains the necessary tools for setting up UC-5100
 
 Package: uc5100-kernel
 Architecture: any
-Depends: ${misc:Depends},
+Depends: ${misc:Depends}
 Description: UC-5100 Flattened Image
  Flattened image contains kernel image and device tree. It includes not only
  realtime but also standard linux image and its device tree
 
 Package: uc5100-modules-std
 Architecture: any
-Depends: ${misc:Depends},
+Depends: ${misc:Depends}
 Description: UC-5100 standard kernel modules
  The Linux standard kernel modules for use on UC-5100
 
 Package: uc5100-moxa-configs
 Architecture: any
-Depends: ${misc:Depends},
+Depends: ${misc:Depends}
 Description: UC-5100 platform configuration file
  The platform-related configuration items are recoreded in this file,
  these items will be referred to other platform packages
 
 Package: uc5100-sparklan-firmware
 Architecture: any
-Depends: ${misc:Depends},
+Depends: ${misc:Depends}
 Description: Sparklan 160 ACN WiFi module firmware on moxa UC-5100 series.
 
