fix: remove moxa-rclocal

--- a/base-system/uc5100_init.service
+++ b/base-system/uc5100_init.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Moxa UC5100 series initial setting
-Before=rc.local.service moxa-push-button.service
+Before=rc-local.service moxa-push-button.service
 
 [Service]
 Type=oneshot
