refactor: move mx-ver out from system package

--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Depends: ${misc:Depends},
          uc5100-sparklan-firmware (= ${binary:Version}),
          uc5100-kernel (>= ${binary:Version}),
          uc5100-modules-std (>= ${binary:Version}),
+         moxa-version (>= 1.0.0),
          moxa-led-control,
          moxa-push-button,
          moxa-uart-control,
