--- a/debian/control
+++ b/debian/control
@@ -12,8 +12,8 @@ Depends: ${misc:Depends},
          ${shlibs:Depends},
          uc5100-moxa-configs (= ${binary:Version}),
          uc5100-sparklan-firmware (= ${binary:Version}),
-         uc5100-kernel (>= ${binary:Version}),
-         uc5100-modules-std (>= ${binary:Version}),
+         uc5100-kernel (>= 2.0.0),
+         uc5100-modules-std (>= 2.0.0),
          moxa-version (>= 1.0.0),
          moxa-led-control,
          moxa-push-button,
@@ -30,19 +30,6 @@ Depends: ${misc:Depends},
          tpm2-tools
 Description: Base system for UC-5100
  It contains the necessary tools for setting up UC-5100
-
-Package: uc5100-kernel
-Architecture: any
-Depends: ${misc:Depends}
-Description: UC-5100 Flattened Image
- Flattened image contains kernel image and device tree. It includes not only
- realtime but also standard linux image and its device tree
-
-Package: uc5100-modules-std
-Architecture: any
-Depends: ${misc:Depends}
-Description: UC-5100 standard kernel modules
- The Linux standard kernel modules for use on UC-5100
 
 Package: uc5100-moxa-configs
 Architecture: any
