fix: update package dependencies

--- a/debian/control
+++ b/debian/control
@@ -9,22 +9,21 @@ Homepage: http://www.moxa.com/
 Package: uc5100-base-system
 Architecture: any
 Depends: ${misc:Depends},
-         ${shlibs:Depends},
          uc5100-moxa-configs (= ${binary:Version}),
-         uc5100-kernel (>= 2.0.0),
-         uc5100-modules-std (>= 2.0.0),
-         sparklan-qca9377-driver-4.4.0-cip-am335x (>= 2.0.0),
+         uc5100-kernel (>= 4.4.154+2.1.0),
+         uc5100-modules-std (>= 4.4.154+2.1.0),
+         sparklan-qca9377-driver-4.4.0-cip-am335x (>= 4.4.154+2.1.0),
          moxa-version (>= 1.0.0),
-         moxa-led-control,
-         moxa-push-button,
-         moxa-uart-control,
-         moxa-dio-control,
+         moxa-led-control (>= 1.1.0),
+         moxa-push-button (>= 1.1.2),
+         moxa-uart-control (>= 1.1.3),
+         moxa-dio-control (>= 1.1.1),
          moxa-module-control (>= 1.3.1),
-         moxa-firmware-tools,
-         moxa-cellular-utils,
-         moxa-wifi-utils,
-         moxa-cellular-signald,
-         moxa-wifi-signald,
+         moxa-firmware-tools (>= 1.1.1),
+         moxa-cellular-utils (>= 1.52.9),
+         moxa-wifi-utils (>= 1.6.5),
+         moxa-cellular-signald (>= 1.52.9),
+         moxa-wifi-signald (>= 1.6.5),
          moxa-nport-real-tty-utils,
          u-boot-tools,
          tpm2-tools
