--- a/debian/rules
+++ b/debian/rules
@@ -9,5 +9,15 @@ export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 
 override_dh_missing:
 	dh_missing --fail-missing
+
 override_dh_shlibdeps:
 	dh_shlibdeps --dpkg-shlibdeps-params=--ignore-missing-info
+
+override_dh_installinit:
+	dh_installinit -puc5100-base-system --no-start --no-restart-after-upgrade --noscripts
+
+override_dh_systemd_start:
+	$(info Skip dh_systemd_start ...)
+
+override_dh_strip:
+	dh_strip --no-automatic-dbgsym
