fix: fix GPIO setting method in moxa-module-control.conf

--- a/base-system/etc/moxa-configs/UC-5102-LX/configs/moxa-module-control.conf
+++ b/base-system/etc/moxa-configs/UC-5102-LX/configs/moxa-module-control.conf
@@ -21,11 +21,17 @@ _set_gpio() {
 
 	if [ ! -e "/sys/class/gpio/gpio${gpio}" ]; then
 		echo "${gpio}" > "/sys/class/gpio/export"
-		echo "${direction}" > "/sys/class/gpio/gpio${gpio}/direction"
 	fi
-	if [ X"${direction}" == X"out" ]; then
-		echo "${value}" > "/sys/class/gpio/gpio${gpio}/value"
-	fi
+
+	if [ "${direction}" = "in" ]; then
+		echo "in" > /sys/class/gpio/gpio${gpio}/direction
+	elif [ "${direction}" = "out" ]; then
+		if [ "${value}" = "0" ]; then
+			echo "low" > /sys/class/gpio/gpio${gpio}/direction
+		elif [ "${value}" = "1" ]; then
+			echo "high" > /sys/class/gpio/gpio${gpio}/direction
+		fi
+	if
 }
 
 #
