--- a/base-system/lib/systemd/system/uc5100-base-system.service
+++ b/base-system/lib/systemd/system/uc5100-base-system.service
@@ -9,4 +9,4 @@ ExecStop=/sbin/uc5100_platform_init stop
 RemainAfterExit=yes
 
 [Install]
-WantedBy=multi-user.target poweroff.target
+WantedBy=multi-user.target
